--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ body {
     width: 700px;
     height: 160vh; 
     margin: 0 auto; 
-    background-image: url(https://github.com/MohammedAHMED2025/Project-Event-invite-5465jf574/blob/main/Watercolor_green_leaves_wreath_with_gold_circle.jpg);
+    background-image: url(main/Watercolor_green_leaves_wreath_with_gold_circle.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
